# buo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
src/: cfg.rs  cli.rs  lib.rs  main.rs  prelude.rs  util.rs
src/cli/: args.rs  types.rs
src/tests/: audio.rs
src/util/: cache.rs  dev.rs  dirs.rs  file_types.rs  iso4.rs  json_out.rs  media.rs  os.rs  traits.rs  web.rs
src/util/cache/: live.rs  local.rs  permanent.rs  session.rs
src/util/media/: audio.rs  meta.rs  video.rs
src/util/text/: code.rs
src/util/web/: chromium.rs  firefox.rs
