[package]
name = "berry"
version = "0.1.0"
authors = ["hal9000 <hal@9000.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
clap = { git = "https://github.com/clap-rs/clap/" }
mlua = { version = "0.5", features = ["lua54", "vendored", "serialize"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
strum = { version = "0.21.0", features = ["derive"] }
symphonia = { version = "0.2.0", features = ["aac", "flac", "isomp4", "mp3", "wav", "ogg", "pcm"] }
toml = "0.5.8"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
