[package]
name = "buo"
version = "0.1.0"
authors = ["hal9000 <hal@9000.com>"]
edition = "2018"

[lib]
path = 'src/lib.rs'

[dependencies]
anyhow = "1.0.41"
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { git = "https://github.com/clap-rs/clap/", features = ["color"] }
colored = "2.0.0"
filesize = "0.2.0"
matroska = "0.7.0"
# mlua = { version = "0.5", features = ["lua54", "vendored", "serialize"] }
once_cell = "1.8.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
strum = { version = "0.21.0", features = ["derive"] }
symphonia = { version = "0.2.0", features = ["aac", "flac", "isomp4", "mp3", "wav", "ogg", "pcm"] }
tinyvec = { version = "1.2.0", features = ["rustc_1_40"] }
tokei = { version = "12.1.2", features = ["yaml"] }
toml = "0.5.8"
